fix(security): externalise CORS allowed origins to env variable